2012-09-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_reporting.php
	 operation/reporting/reporting_xml.php: Some fixes on CSV and XML
	 report exportation.

2012-09-10  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php: Fixed some notices for
	bug #3564715

2012-09-07 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_html.php
	include/graphs/fgraph.php
	include/functions_reporting.php
	include/javascript/pandora.js
	include/ajax/reporting.ajax.php
	include/ajax/agent.php
	pandoradb.sql
	pandoradb.postgreSQL.sql
	pandoradb.oracle.sql
	operation/agentes/ver_agente.php
	operation/reporting/reporting_viewer.php
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql
	general/header.php
	godmode/reporting/reporting_builder.list_items.php
	godmode/reporting/reporting_builder.php
	godmode/reporting/reporting_builder.item_editor.php: Integration of reports
	in metaconsole.

2012-09-07 Miguel de Dios <miguel.dedios@artica.es>
	* include/functions_ui.php: fixed the ui_get_full_url function,
	because sometimes added two times the php script name.
	
	* operation/events/events_rss.php: avoid to lost the url with the
	actual fixes into the function ui_get_full_url.

2012-09-06 Miguel de Dios <miguel.dedios@artica.es>
	
	* general/header.php, general/login_page.php,
	godmode/setup/setup.php, include/functions_ui.php,
	include/functions_graph.php, include/functions_html.php,
	include/graphs/fgraph.php, include/graphs/functions_pchart.php,
	include/graphs/functions_flot.php, include/functions_reporting.php,
	include/functions_visual_map.php, include/functions_config.php,
	operation/reporting/reporting_viewer.php,
	operation/visual_console/render_view.php,
	operation/agentes/tactical.php, operation/menu.php,
	operation/events/events.php: added the feature to set a